force-app/main/default/objects/CountryConfig__c/CountryConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows to define a specific configuration for a dedicated Country.</description>
    <label>Country Config</label>
</CustomObject>