force-app/main/default/objects/CountryConfig__c/fields/CannotEditClients__c.field-meta.xml
<CustomField>
    <fullName>CannotEditClients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannot Edit Clients</label>
    <type>Checkbox</type>
</CustomField>