force-app/main/default/objects/CountryConfig__c/fields/ClientNameDisplay__c.field-meta.xml
<CustomField>
    <fullName>ClientNameDisplay__c</fullName>
    <description>Indicates for a country the display to use between FNLN and LNFN 
Values : FNLN, LNFN</description>
    <label>Client Name Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>