force-app/main/default/objects/CountryConfig__c/fields/Law_Settings__c.field-meta.xml
<CustomField>
    <fullName>Law_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Law Settings</label>
    <type>Checkbox</type>
</CustomField>