force-app/main/default/objects/CountryConfig__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line</label>
    <type>Checkbox</type>
</CustomField>