force-app/main/default/objects/CountryConfig__c/fields/Line_Works__c.field-meta.xml
<CustomField>
    <fullName>Line_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Works</label>
    <type>Checkbox</type>
</CustomField>