force-app/main/default/objects/CountryConfig__c/fields/Viber__c.field-meta.xml
<CustomField>
    <fullName>Viber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viber</label>
    <type>Checkbox</type>
</CustomField>