force-app/main/default/objects/CountryConfig__c/fields/Zalo__c.field-meta.xml
<CustomField>
    <fullName>Zalo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zalo</label>
    <type>Checkbox</type>
</CustomField>