force-app/main/default/objects/CountryConfig__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Locale__c</columns>
    <columns>Kakao__c</columns>
    <columns>Line__c</columns>
    <columns>Line_Works__c</columns>
    <columns>Wechat__c</columns>
    <columns>WhatsApp__c</columns>
    <columns>Viber__c</columns>
    <columns>Zalo__c</columns>
    <columns>Law_Settings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>